adjust margin of amazon link ot match pdf link exactly to fix renderign issue on mobile

--- a/main.css
+++ b/main.css
@@ -119,7 +119,7 @@ img {display: block;}
     padding: 1rem 1.5rem;
     border-radius: 15px;
     text-decoration: none;
-    margin: 10% 0 10% 0;
+    margin: 5% 0 5% 0;
     box-shadow: 0 0 2em rgb(0, 0, 0);
 } 
 
